# rawal-hr-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.prod.sh  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 14b7859756af_user.py  26f04848f166_add_hr_module_entities.py  3b35e08c8668_create_tools_schema_and_calendar_events_.py  9bc4afe1b363_add_is_admin_flag_to_user_table.py
app/: Logger.py  main.py  router.py
app/API/Controllers/: UserController.py
app/API/Dependencies/: Authentication.py  GetEmployee.py  container.py
app/API/Middleware/: AuthenticationMiddleware.py  DbSessionMiddleware.py
app/API/Utilities/: ApiResponse.py  exception_handlers.py
app/Core/Config/: settings.py
app/Core/Database/: ApplicationDatabaseContext.py
app/Core/Security/: PasswordManager.py
app/Dto/Token/: AccessTokenDto.py
app/Dto/User/: UserDto.py
app/Entities/: BaseEntity.py
app/Entities/Base/: User.py
app/HR/: constants.py
app/HR/DTOs/: AttendanceDTO.py  EmployeeDTO.py  PayrollDTO.py  SalaryRateDTO.py  TimeLogDTO.py
app/HR/Entities/: AttendanceEntity.py  EmployeeEntity.py  PayrollEntity.py  SalaryRateEntity.py  TimeLogEntity.py
app/HR/Repositories/: AttendanceRepository.py  EmployeeRepository.py  PayrollRepository.py  SalaryRateRepository.py  TimeLogRepository.py
app/HR/Services/: AttendanceService.py  EmployeeService.py  PayrollService.py  SalaryRateService.py  TimeLogService.py
app/scripts/: seed.py
docker/: docker-compose.prod.yml
(+27 files in other folders)
